完成初步架构